# libvdpau-tegra

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
contrib/: 70-tegra_vde.rules
debian/: changelog  control  copyright  libvdpau-tegra.postinst  libvdpau-tegra.udev  rules  watch
src/: Makefile.am  atomic.h  bitstream.c  bitstream.h  decoder.c  dmabuf.c  dri2.c  dri2.h  gen_shader_bin.c  host1x-api.h  host1x-gr2d.c  host1x-gr3d.c  host1x-pixelbuffer.c  host1x.h  media.c  presentation_queue.c  presentation_queue_target.c  surface.c  surface_bitmap.c  surface_cache.c  surface_mixer.c  surface_output.c  surface_rotate.c  surface_shared.c  surface_video.c  tegra_stream.c  tegra_stream.h  tegra_stream_v1.c  tegra_stream_v2.c  v4l2.c  v4l2.h  vdpau-tegra.pc.in  vdpau_tegra.c  vdpau_tegra.h
src/asm/: fragment_asm.y
src/shaders/: prog.h
src/shaders/blend_atop/: fragment.asm  linker.asm  vertex.asm
src/shaders/blend_atop_solid_shade/: fragment.asm  linker.asm  vertex.asm
src/tegradrm/: private.h  tegra.c  tegra_bo_cache.c
src/uapi/: media.h  tegra-vde-v1.h  tegra-vde.h  types-compat.h  v4l2-common.h  v4l2-controls.h  videodev2.h
